--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 3000:3000
     volumes_from:
       - bundle_cache
-    command: bash -c "rm /task_manager/tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0' -p 3000"
+    command: bash -c "bundle exec rails s -b '0.0.0.0' -p 3000"
     environment:
       BUNDLE_PATH: /bundle_cache
       DATABASE_HOST: db
