--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ before_install:
   - docker-compose run --rm app /bin/sh -c "bundle install; RAILS_ENV=test  bundle exec rails db:create db:migrate"
 script:
   - docker-compose run --rm app /bin/sh -c "RAILS_ENV=test  bundle exec rake test"
+notifications:
+  email: false
