--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-trello": "^2.2.2",
     "webpacker-react": "^0.3.2"
