--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
-    "webpack-dev-server": "3.1.11",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "3.1.11"
   }
 }
