--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "@reduxjs/toolkit": "^1.0.4",
     "axios": "^0.19.0",
     "babel-preset-react": "^6.24.1",
     "humps": "^2.0.1",
